Cordova app - EvoThings pointing at Chris's laptop.

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,8 @@
 		<!--<button class="menu" onclick=""><img src="ui/images/menu.svg" /></button>-->
 	</header>
 
-
+	<p>Hello Raj</p>
+	
 	<ol>
 		<li>Press the "Code" button in the Workbench window to see the source
 			file of this example app.</li>
