added chat input

--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,11 @@
 
 					<h2>Chat:</h2>
 
+					<form class="chat-message">
+						  <input type="text" id="message" class="form-control" placeholder="message" aria-describedby="basic-addon3">
+						  <input type="submit" class="btn btn-primary" id="send-chat" value="send"/>
+	                </form>
+
 					<ul id="chat" class="dynamic">
 						<li>
 							<p><span>Vince:</span> Ooh, some non-descript meat wrap!</p>
