--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no
 		initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 
-	<title>Cordova iBeacon</title>
-	
-
+	<title>Park Life</title>
 
 	<script>
 	// Redirect console.log to Evothings Workbench.
@@ -76,7 +74,6 @@
 						  <input type="submit" class="btn btn-primary" id="send-chat" value="send"/>
 	                </form>
 
-<<<<<<< HEAD
 					<ul id="chat" class="dynamic">
 						<li>
 							<p><span>Vince:</span> Ooh, some non-descript meat wrap!</p>
@@ -87,7 +84,7 @@
 						<li>
 							<p><span>Vince:</span> Ooh, some non-descript meat wrap!</p>
 						</li>
-=======
+
 					<ul id="events" class="dynamic"></ul>
 
 					<p>Chat:</p>
@@ -95,20 +92,13 @@
 					<input type="button" id="sendmessage" value="Send" />
 					<input type="hidden" id="displayname" />
 					<ul id="discussion">
->>>>>>> Add signal R.
+
 					</ul>
 				</div>
 			</div>
 
 		</div>
 	</div>
-
-	    
-    <script>
-        $(function () {
-
-        });
-    </script>
 </body>
 
 </html>
